<resources>
    <string name="app_name">Card Base</string>
    <string name="test">Test Text 1</string>
    <string name="Name">Name</string>
    <string name="Number">Number</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="header">Header</string>
    <string name="action_bar">Action Bar</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="company_name">Company Name</string>
    <string name="employee_1">Employee 1</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="Add">Add</string>
    <string name="save_changes">Save Changes</string>
    <string name="click_picture">Click Picture</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
