<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Thread.CardBase.Add_new">
    <TextureView
        android:id="@+id/imgview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"/>
    <EditText
        android:id="@+id/com_name"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/imgview"
        android:hint="@string/company_name"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/emp1"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/com_name"
        android:hint="@string/employee_1"
        android:paddingTop="15dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/com_name"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/emp1"
        android:hint="@string/contact_number"
        android:inputType="text" />
    <EditText
        android:id="@+id/emp2"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/emp1"
        android:hint="@string/employee_1"
        android:paddingTop="15dp"
        android:layout_marginStart="15dp"/>
    <EditText
        android:id="@+id/num2"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/num1"
        android:layout_toEndOf="@id/emp2"
        android:hint="@string/contact_number"
        android:layout_marginStart="15dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/num2"
        android:layout_marginStart="15dp"
        android:hint="@string/email_address"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginStart="15dp"
        android:hint="@string/address"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/Add"
        android:layout_below="@id/address"
        android:layout_marginStart="15dp" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/btn1"
        android:layout_below="@id/address"
        android:text="@string/click_picture"/>

</RelativeLayout>